--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,7 @@
     
   <body>
       
-    Welcome To OurKadai
+    Welcome To OurKadai 2.0
       ${require('./layouts/_scripts.html')}
 
   </body>
