--- a/src/index.html
+++ b/src/index.html
@@ -5,9 +5,14 @@
     </head>
     
   <body>
-      
-    Welcome To OurKadai 2.0
+    <header>
+        <div class="header-text">
+          <p class="center" style="padding-left: 450px; padding-top: 75px;">
+            <img src="/images/OurKadiaLogo.jpg" alt="" width="500"
+            height="500" >
+          </p>
+        </div><!-- End HeaderText -->
+    </header><!-- End Header -->
       ${require('./layouts/_scripts.html')}
-
   </body>
 </html>
