--- a/src/index.html
+++ b/src/index.html
@@ -5,14 +5,17 @@
     </head>
     
   <body>
-    <header>
-        <div class="header-text">
-          <p class="center" style="padding-left: 450px; padding-top: 75px;">
-            <img src="/images/OurKadiaLogo.jpg" alt="" width="500"
-            height="500" >
-          </p>
-        </div><!-- End HeaderText -->
-    </header><!-- End Header -->
+ 
+<div class="bgimg display-container animate-opacity text-white">
+  <div class="w3-display-topleft w3-padding-large w3-xlarge">
+    OurKadai
+  </div>
+  <div class="display-middle">
+    <p class="content-large content-center">35 days left</p>
+  </div>
+</div>
+
+</body>
       ${require('./layouts/_scripts.html')}
   </body>
 </html>
