--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,9 @@
     OurKadai
   </div>
   <div class="display-middle">
-    <p class="content-large content-center">35 days left</p>
+    <p class="content-large content-center">நண்பர்களே , எங்கள் மாணவர்கள் மற்றும் தன்னார்வலர்களின் முயற்சியில் இன்று அடுத்த முயற்சியாய் வரும் சித்திரை திங்கள் ஒன்றாம் நாள் "அவர்கடை" யில் அடி எடுத்து வைக்கிறோம். இது அரசு பள்ளியில் படித்த , தாய்மொழி வழி பயின்ற மாணவர்களுக்கு என்று தனி நிறுவனம்.  உங்கள் வாழ்த்துக்களுக்கு ஊக்கத்துக்கும் நன்றி.
+    </p>
+   
   </div>
 </div>
 
