--- a/src/index.html
+++ b/src/index.html
@@ -8,11 +8,14 @@
  
 <div class="bgimg display-container animate-opacity text-white">
   <div class="w3-display-topleft w3-padding-large w3-xlarge">
-    OurKadai
+    <span >
+      <img src="../images/OurKadiaLogopreview.png" alt="" style="width: 250px;height: 250px;">
+    </span>
   </div>
   <div class="display-middle">
-    <p class="content-large content-center">நண்பர்களே , எங்கள் மாணவர்கள் மற்றும் தன்னார்வலர்களின் முயற்சியில் இன்று அடுத்த முயற்சியாய் வரும் சித்திரை திங்கள் ஒன்றாம் நாள் "அவர்கடை" யில் அடி எடுத்து வைக்கிறோம். இது அரசு பள்ளியில் படித்த , தாய்மொழி வழி பயின்ற மாணவர்களுக்கு என்று தனி நிறுவனம்.  உங்கள் வாழ்த்துக்களுக்கு ஊக்கத்துக்கும் நன்றி.
-    </p>
+    <p class="content-large text-center" style="color: aliceblue;"> UNDER CONSTRUCTION</p>
+
+    <p class="content-large text-center" style="color: aliceblue;"> 13 Days To Go</p>
    
   </div>
 </div>
