initial commit for inaguration

--- a/src/index.html
+++ b/src/index.html
@@ -9,8 +9,8 @@
     <main>
       <div class="info-board">
         <img src="/images/Web_logo.svg"/>
-        <h1>Under construction</h1>
-        <h2>Startes on April 14th</h2>
+        <h1>A Trusted Technology Partner</h1>
+        <h2></h2>
       </div>
       
 
