--- a/src/work/index.html
+++ b/src/work/index.html
@@ -1,63 +1,92 @@
 <!doctype html>
 <html lang="en">
-    <head>
-        ${require('./../layouts/_head.html')}
-    </head>
-    
-  <body>
 
-    <div class="cover-container d-flex w-100 h-100 p-3 mx-auto flex-column">
-      ${require('./../layouts/_header.html')}
-    
-      <main class="px-3">
-        <div class="row g-0 border rounded overflow-hidden flex-md-row mb-4 shadow-sm h-md-250 position-relative">
-          <div class="col p-4 d-flex flex-column position-static">
-            <strong class="d-inline-block mb-2 text-primary">Low Code/No Code</strong>
-            <h3 class="mb-0">Aurzart</h3>
+<head>
+  ${require('./../layouts/_head.html')}
+</head>
 
-            <p class="card-text mb-auto">This is a wider card with supporting text below as a natural lead-in to additional content.</p>
-          </div>
-          <div class="col-auto d-none d-lg-block">
-            <img width="100px" height="100px"src="/images/aurzart_logo.png"/>
-          </div>
+<body>
+
+  <div class="cover-container d-flex w-100 h-100 p-3 mx-auto flex-column">
+    ${require('./../layouts/_header.html')}
+
+    <main class="px-3">
+      <div class="row g-0 border rounded overflow-hidden flex-md-row mb-4 shadow-sm h-md-250 position-relative">
+        <div class="col p-4 d-flex flex-column position-static">
+          <strong class="d-inline-block mb-2 text-primary">Low Code/No Code</strong>
+          <h3 class="mb-0">Aurzart</h3>
+
+          <p class="card-text mb-auto">Aurzart.com – ‘Made by musician for musician’ as the company slogan proudly
+            pronounces. Not only the music instruments that is being sold, the whole
+            ecommerce site is also solely made by a musician, managed and operated day-in
+            and day-out by a technology novice.
+            </br>
+            Keen to know how this techno-romance unfolded? Here we go!
+            </br>
+            Hats off to Martyn Charles, who is proudly one of the earliest adaptors of no-code platform in India who
+            launched his close to heart online music business in just a week’s time. Yes, you heard right! Vroom…From
+            zero to hero, in just 7 days.
+            </br>
+            Technology empowered this change-over. With all modesty, OurKadai humbly proclaims that we enabled this
+            melodious technology rendezvous, a reality. We made Martyn believe that online ecommerce business is just a
+            child’s play even to a non-techie music enthusiast.
+            </br>What is there in it for OurKadai to boast? Well, we baby stepped a techno-shy musician (until he met
+            us) to the world of no-code platforms, without spilling any silvers. When your dreams take color, shape and
+            fly without putting a hole in your wallets, what is that you call it as? Yes, Dreams do come true.
+            </br>
+            Now, Martyn is managing his ecommerce business all alone with incredible confidence without any kind of
+            sustenance or support from any techies. We just relish the symphonic melodies from the side lines. What more
+            a true Guru can expect than enjoying the success of his beloved and self-reliant disciple? That is what we
+            call as, ‘Trusted Technology Partnership’
+            </br>It really worth to pay a visit to Aurzart.com. Feel free to reach out to Martyn Charles to hear more
+            about us if you desire.
+          </p>
         </div>
-        <div class="row g-0 border rounded overflow-hidden flex-md-row mb-4 shadow-sm h-md-250 position-relative">
-          <div class="col p-4 d-flex flex-column position-static">
-            <strong class="d-inline-block mb-2 text-primary">Database Migration</strong>
-            <h3 class="mb-0">EZee Infotech</h3>
-
-            <p class="card-text mb-auto">This is a wider card with supporting text below as a natural lead-in to additional content.</p>
-          </div>
-          <div class="col-auto d-none d-lg-block">
-            <img width="100px" height="100px"src="/images/aurzart_logo.png"/>
-          </div>
+        <div class="col-auto d-none d-lg-block">
+          <img width="100px" height="100px" src="/images/aurzart_logo.png" />
         </div>
-        <div class="row g-0 border rounded overflow-hidden flex-md-row mb-4 shadow-sm h-md-250 position-relative">
-          <div class="col p-4 d-flex flex-column position-static">
-            <strong class="d-inline-block mb-2 text-primary">Digital Transfermation</strong>
-            <h3 class="mb-0">Sridevi Group Of Companies</h3>
+      </div>
+      <div class="row g-0 border rounded overflow-hidden flex-md-row mb-4 shadow-sm h-md-250 position-relative">
+        <div class="col p-4 d-flex flex-column position-static">
+          <strong class="d-inline-block mb-2 text-primary">Database Migration</strong>
+          <h3 class="mb-0">EZee Infotech</h3>
 
-            <p class="card-text mb-auto">This is a wider card with supporting text below as a natural lead-in to additional content.</p>
-          </div>
-          <div class="col-auto d-none d-lg-block">
-            <img width="100px" height="100px"src="/images/aurzart_logo.png"/>
-          </div>
+          <p class="card-text mb-auto">This is a wider card with supporting text below as a natural lead-in to
+            additional content.</p>
         </div>
-        <div class="row g-0 border rounded overflow-hidden flex-md-row mb-4 shadow-sm h-md-250 position-relative">
-          <div class="col p-4 d-flex flex-column position-static">
-            <strong class="d-inline-block mb-2 text-primary">Agile/Devops Consulting</strong>
-            <h3 class="mb-0">See Change Consulting</h3>
-
-            <p class="card-text mb-auto">This is a wider card with supporting text below as a natural lead-in to additional content.</p>
-          </div>
-          <div class="col-auto d-none d-lg-block">
-            <img width="100px" height="100px"src="/images/aurzart_logo.png"/>
-          </div>
+        <div class="col-auto d-none d-lg-block">
+          <img width="100px" height="100px" src="/images/aurzart_logo.png" />
         </div>
-        </main>
-    </div>
- 
+      </div>
+      <div class="row g-0 border rounded overflow-hidden flex-md-row mb-4 shadow-sm h-md-250 position-relative">
+        <div class="col p-4 d-flex flex-column position-static">
+          <strong class="d-inline-block mb-2 text-primary">Digital Transfermation</strong>
+          <h3 class="mb-0">Sridevi Group Of Companies</h3>
 
-      ${require('./../layouts/_scripts.html')}
-  </body>
+          <p class="card-text mb-auto">This is a wider card with supporting text below as a natural lead-in to
+            additional content.</p>
+        </div>
+        <div class="col-auto d-none d-lg-block">
+          <img width="100px" height="100px" src="/images/aurzart_logo.png" />
+        </div>
+      </div>
+      <div class="row g-0 border rounded overflow-hidden flex-md-row mb-4 shadow-sm h-md-250 position-relative">
+        <div class="col p-4 d-flex flex-column position-static">
+          <strong class="d-inline-block mb-2 text-primary">Agile/Devops Consulting</strong>
+          <h3 class="mb-0">See Change Consulting</h3>
+
+          <p class="card-text mb-auto">This is a wider card with supporting text below as a natural lead-in to
+            additional content.</p>
+        </div>
+        <div class="col-auto d-none d-lg-block">
+          <img width="100px" height="100px" src="/images/aurzart_logo.png" />
+        </div>
+      </div>
+    </main>
+  </div>
+
+
+  ${require('./../layouts/_scripts.html')}
+</body>
+
 </html>
