--- a/src/about/index.html
+++ b/src/about/index.html
@@ -1,25 +1,68 @@
 <!doctype html>
 <html lang="en">
-    <head>
-        ${require('./../layouts/_head.html')}
-    </head>
-    
-  <body>
 
-    <div class="cover-container d-flex w-100 h-100 p-3 mx-auto flex-column">
-      ${require('./../layouts/_header.html')}
-    
-      <main class="px-3">
-        Driven by desire to contribute meaningfully to the technology and community, OurKadai Technologies is a consortium of steadfast, passionate & dedicated brains and minds, promoting the culture of Open-Source software. Design and development of web applications,  seamless integration of business applications and automation of business process flows, UI/UX are the key areas of interest. 
+<head>
+  ${require('./../layouts/_head.html')}
+</head>
+
+<body>
+
+  <div class="cover-container d-flex w-100 h-100 p-3 mx-auto flex-column">
+    ${require('./../layouts/_header.html')}
+
+    <main class="px-3">
+      Driven by desire to contribute meaningfully to the technology and community, OurKadai Technologies is a consortium
+      of steadfast, passionate & dedicated brains and minds, promoting the culture of Open-Source software. Design and
+      development of web applications, seamless integration of business applications and automation of business process
+      flows, UI/UX are the key areas of interest.
 
       </br>
-        OurKadai focuses on highly qualitative, timely delivered and cost-effective e-business solutions and development services. With rich and varied experience in software development, project management capabilities and stringent quality standards, we ensure to develop and deliver products and services of the highest degree.
-</main>
-    </div>
- 
-   
+      OurKadai focuses on highly qualitative, timely delivered and cost-effective e-business solutions and development
+      services. With rich and varied experience in software development, project management capabilities and stringent
+      quality standards, we ensure to develop and deliver products and services of the highest degree.
+
+      <div>
+        Averse to technology, but can’t live without it in this web economy? Never
+        mind. We are just a click away to assist you.
+        </br>
+        We will hand-held you to tame the technology beast and make you to fall in
+        love with it and get you engaged &amp; live happily ever after. Just, as we do!
+        </br>
+        OurKadai Technologies is a consortium of steadfast, passionate &amp;
+        dedicated brains and minds, promoting the culture of Open-Source
+        software. Our ethos are driven by a desire to contribute meaningfully to the
+        technology and community.
+        </br>
+        We design and develop web applications, integrate them seamlessly,
+        automate business flows and enable cost-effective e-business solutions
+        with alluring user experience thorough UI/UX.
+        </br>
+        Our resolute focus is on efficient, cost-effective, quality and timely delivery
+        of technology solutions for business challenges.
+        </br>
+        With rich and diverse experience in software development, project
+        management capabilities and stringent quality standards, we ensure to
+        develop and deliver products and services of the highest degree.
+      </div>
+      <h3>VISION</h3>
+      <div>TO BE THE TRUSTED TECHNOLOGY PARTNER AND ENABLER OF
+        WEB TECHNOLOGIES THAT TRANSFORM BUSINESS PROCESSES
+        OF SMALL &amp; MEDIUM ENTERPRISES IN INDIA
+      </div>
+      <h3>MISSION</h3>
+      <div>Through web technology-driven superior quality software solutions that deliver
+        the right value to our customers, we are committed to addressing the challenges
+        in transforming the business processes of small and medium enterprises in India
+        and aspire to be the trusted technology partners.
+      </div>
+
+    </main>
+  </div>
 
 
-      ${require('./../layouts/_scripts.html')}
-  </body>
+
+
+  ${require('./../layouts/_scripts.html')}
+</body>
+
 </html>
