--- a/src/index.html
+++ b/src/index.html
@@ -11,9 +11,17 @@
     
       <main class="px-3">
         <h1>OurKadai.</h1>
-        <p class="lead">A Trusted Technology Partner</p>
+        <h3>
+          We are a Software Company that help in your digital transformation journey therough 
+          <span class="type">
+          <span>
+            <span>Microservices</span>
+            <span>Devops</span>
+            <span>JAM Stack</span>
+          </span>
+        </span></h3>
         <p class="lead">
-          <a href="#" class="btn btn-lg btn-secondary fw-bold">Learn more</a>
+          <a href="/services" class="btn btn-lg btn-secondary fw-bold">Get Started</a>
         </p>
       </main>
     
