--- a/src/publications/index.html
+++ b/src/publications/index.html
@@ -6,7 +6,7 @@
     
   <body>
 
-    <div class="cover-container d-flex w-100 h-100 p-3 mx-auto flex-column">
+    <div class="cover-container d-flex w-100 h-100 mx-auto flex-column">
       ${require('./../layouts/_header.html')}
     
       <main class="px-3">
