--- a/src/index.html
+++ b/src/index.html
@@ -9,14 +9,15 @@
 
       <div class="d-flex flex-column min-vh-100 justify-content-center align-items-center">
         <img class="img-fluid w-25" src="/images/logo.png" />
-        <h4 class="w-50">We are a Software Company that help in your digital transformation journey through 
-          <span class="type">
+        <h5 class="w-50 text-center">
+          A Software Company that can help <br> in your <span class="lead">Digital transformation</span> journey <br>through 
+          <span class="type lead">
           <span>
             <span>Microservices</span>
             <span>Devops</span>
             <span>JAM Stack</span>
           </span>
-        </span></h4>
+        </span></h5>
         <a href="/services" class="btn btn-lg btn-secondary fw-bold">Get Started</a>
     </div>
       
