--- a/src/contact/index.html
+++ b/src/contact/index.html
@@ -21,7 +21,7 @@
 
 
               <div class="row justify-content-center">
-                <div class="col-md-6">
+                <!-- <div class="col-md-6">
 
                   <h3 class="heading mb-4">Let's talk about everything!</h3>
                   <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptas debitis, fugit natus?</p>
@@ -31,8 +31,8 @@
                   </p>
 
 
-                </div>
-                <div class="col-md-6 border-start border-info border-2">
+                </div> -->
+                <div class="col-md-6">
 
                   <form class="mb-5" method="post" id="contactForm" name="contactForm">
                     <div class="row pt-5">
