--- a/src/publications/index.html
+++ b/src/publications/index.html
@@ -36,11 +36,10 @@
               <div class="card h-100">
                 <!-- 16:9 aspect ratio -->
               <div class="embed-responsive embed-responsive-16by9">
-                <iframe class="embed-responsive-item w-100 h-100" src="https://www.youtube.com/watch?v=KyqjwicBX7E" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-              </div>
+                <iframe class="embed-responsive-item w-100 h-100" src="https://www.youtube.com/embed/KyqjwicBX7E" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div>
 
               <div class="card-body">
-                <strong class="d-inline-block mb-2 text-success">Jam Stack Conference</strong>
+                <strong class="d-inline-block mb-2 text-success">Bangalore JUG Conference</strong>
                 <h5 class="card-title">Introduction to Jam Stack</h5>
                 <p class="card-text">Fast and secure sites and apps delivered by pre-rendering files and serving them directly from a CDN, removing the requirement to manage or run web services.</p>
               </div>
@@ -56,11 +55,10 @@
               <div class="card h-100">
                 <!-- 16:9 aspect ratio -->
               <div class="embed-responsive embed-responsive-16by9">
-                <iframe class="embed-responsive-item w-100 h-100" src="https://www.youtube.com/watch?v=viesL-pSp48" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-              </div>
+                <iframe class="embed-responsive-item w-100 h-100" src="https://www.youtube.com/embed/viesL-pSp48" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div>
 
               <div class="card-body">
-                <strong class="d-inline-block mb-2 text-success">Microservices Conference</strong>
+                <strong class="d-inline-block mb-2 text-success">COMMUNITY-Z Conference</strong>
                 <h5 class="card-title">Gain Without Pain on Spring Boot Microservices Journey at Java Z-Day</h5>
                 <p class="card-text">With all the recent hypes on Microservices, all Java Developers/Architects will now take the journey to microservices ( even if we don't need it :).) Microservices are supposed to make deployment easier which it may or may not as it varies teams to teams. But what is certain is that it makes development harder with distributed teams, complex deployment pipelines, code reusability, and on top of all service MESS. In this talk, we will discuss the common side effects of Microservice and how to gain without pain on this adventurous journey.</p>
                 <p>Z-Days are a series of GLOBAL Community-driven events. One technology gets together communities from all over the world. Everyone can participate! It doesn’t matter from which communities, countries, companies, technology hubs you are.</p>
@@ -77,11 +75,10 @@
               <div class="card h-100">
                 <!-- 16:9 aspect ratio -->
               <div class="embed-responsive embed-responsive-16by9">
-                <iframe class="embed-responsive-item w-100 h-100" src="https://www.youtube.com/watch?v=U4-OrNtEf0U" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-              </div>
+                <iframe class="embed-responsive-item w-100 h-100" src="https://www.youtube.com/embed/U4-OrNtEf0U" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div>
 
               <div class="card-body">
-                <strong class="d-inline-block mb-2 text-success">Web developer Conference</strong>
+                <strong class="d-inline-block mb-2 text-success">Engineers.SG Conference</strong>
                 <h5 class="card-title">Confusions and Confessions of a Web Developer - SingaporeJS</h5>
                 <p class="card-text">Shared the thoughts on what we go through as a web developer during this ever-changing landscape.How and why one should look beyong these new tools, techniques, frameworks and technology to move forward</p>
               </div>
@@ -96,11 +93,10 @@
               <div class="card h-100">
                 <!-- 16:9 aspect ratio -->
               <div class="embed-responsive embed-responsive-16by9">
-                <iframe class="embed-responsive-item w-100 h-100" src="https://www.youtube.com/watch?v=pcaovUHr7gM" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-              </div>
+                <iframe class="embed-responsive-item w-100 h-100" src="https://www.youtube.com/embed/pcaovUHr7gM" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div>
 
               <div class="card-body">
-                <strong class="d-inline-block mb-2 text-success">CSS Conference</strong>
+                <strong class="d-inline-block mb-2 text-success">Engineers.SG Conference</strong>
                 <h5 class="card-title">Tools for Rapid CSS development - Talk.CSS</h5>
                 <p class="card-text">The talk about the tools that can help us to use CSS effectively to build web applications.
                 </p>
@@ -116,11 +112,10 @@
               <div class="card h-100">
                 <!-- 16:9 aspect ratio -->
               <div class="embed-responsive embed-responsive-16by9">
-                <iframe class="embed-responsive-item w-100 h-100" src="https://www.youtube.com/watch?v=JiqoWUlP578" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-              </div>
+                <iframe class="embed-responsive-item w-100 h-100" src="https://www.youtube.com/embed/JiqoWUlP578" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div>
 
               <div class="card-body">
-                <strong class="d-inline-block mb-2 text-success">UX Conference</strong>
+                <strong class="d-inline-block mb-2 text-success">Engineers.SG Conference</strong>
                 <h5 class="card-title">Why and for whom UX (really) matters - Talk.CSS </h5>
                 <p class="card-text">First Talk.CSS of the decade went fairly well, in spite of being on the same day as the crowd-drawing Figma meetup. It was a good turnout and we love each and every one of you for supporting us. If you went to the Figma meetup instead, it’s okay, we still love you too.</p>
               </div>
@@ -135,11 +130,11 @@
               <div class="card h-100">
                 <!-- 16:9 aspect ratio -->
               <div class="embed-responsive embed-responsive-16by9">
-                <iframe class="embed-responsive-item w-100 h-100" src="https://www.youtube.com/watch?v=_kZoFZIGjjA" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                <iframe class="embed-responsive-item w-100 h-100" src="https://www.youtube.com/embed/_kZoFZIGjjA" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
               </div>
 
               <div class="card-body">
-                <strong class="d-inline-block mb-2 text-success">Java Abstract Template Conference</strong>
+                <strong class="d-inline-block mb-2 text-success">Bangalore JUG Conference</strong>
                 <h5 class="card-title">Our Professional Life through Java Abstract Template Patterns</h5>
                 <p class="card-text">This talk is part of a series of sessions conducted by BOJUG to help people whose job is affected by COVID. More details are available here <a href="https://www.meetup.com/BangaloreOpenJUG">Banglore JUG</a></p>
               </div>
@@ -154,11 +149,11 @@
               <div class="card h-100">
                 <!-- 16:9 aspect ratio -->
               <div class="embed-responsive embed-responsive-16by9">
-                <iframe class="embed-responsive-item w-100 h-100" src="https://www.youtube.com/watch?v=MuoktVPjAsY" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                 <iframe class="embed-responsive-item w-100 h-100" src="https://www.youtube.com/embed/MuoktVPjAsY" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
               </div>
 
               <div class="card-body">
-                <strong class="d-inline-block mb-2 text-success">Java Conference</strong>
+                <strong class="d-inline-block mb-2 text-success">Bangalore JUG Conference</strong>
                 <h5 class="card-title">Type System in Java</h5>
                 <p class="card-text">How do represent things in Java?</p>
               </div>
@@ -172,11 +167,10 @@
               <div class="card h-100">
                 <!-- 16:9 aspect ratio -->
               <div class="embed-responsive embed-responsive-16by9">
-                <iframe class="embed-responsive-item w-100 h-100" src="https://www.youtube.com/watch?v=kyC_QSLecC8" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-              </div>
+                <iframe class="embed-responsive-item w-100 h-100" src="https://www.youtube.com/embed/kyC_QSLecC8" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div>
 
               <div class="card-body">
-                <strong class="d-inline-block mb-2 text-success">Interview Conference</strong>
+                <strong class="d-inline-block mb-2 text-success">Bangalore JUG Conference</strong>
                 <h5 class="card-title">Things that matter for your interview preparation</h5>
                 <p class="card-text">How the things that matter for your interview preparation</p>
               </div>
