--- a/src/publications/index.html
+++ b/src/publications/index.html
@@ -36,17 +36,35 @@
               <div class="card h-100">
                 <!-- 16:9 aspect ratio -->
               <div class="embed-responsive embed-responsive-16by9">
-                <iframe class="embed-responsive-item w-100 h-100" src="https://www.youtube.com/embed/KyqjwicBX7E" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div>
+                <iframe class="embed-responsive-item w-100 h-100" src="https://www.youtube.com/embed/U4-OrNtEf0U" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div>
 
               <div class="card-body">
-                <strong class="d-inline-block mb-2 text-success">Bangalore JUG Conference</strong>
-                <h5 class="card-title">Introduction to Jam Stack</h5>
-                <p class="card-text">Fast and secure sites and apps delivered by pre-rendering files and serving them directly from a CDN, removing the requirement to manage or run web services.</p>
+                <strong class="d-inline-block mb-2 text-success">SingaporeJS</strong>
+                <h5 class="card-title">Confusions and Confessions of a Web Developer - SingaporeJS</h5>
+                <p class="card-text">Shared the thoughts on what we go through as a web developer during this ever-changing landscape.How and why one should look beyong these new tools, techniques, frameworks and technology to move forward</p>
               </div>
               <div class="card-footer">
-                <small class="text-muted float-right"><span class="badge rounded-pill bg-secondary">JavaScript</span>
-                  <span class="badge rounded-pill bg-secondary">APIs</span></small>
-                  <span class="badge rounded-pill bg-secondary">Markup</span></small>
+                <small class="text-muted float-right"><span class="badge rounded-pill bg-secondary">Web Developer</span>
+                  <span class="badge rounded-pill bg-secondary">Javascript</span></small>
+              </div>
+              </div>
+            </div>
+
+            <div class="col">
+              <div class="card h-100">
+                <!-- 16:9 aspect ratio -->
+              <div class="embed-responsive embed-responsive-16by9">
+                <iframe class="embed-responsive-item w-100 h-100" src="https://www.youtube.com/embed/pcaovUHr7gM" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div>
+
+              <div class="card-body">
+                <strong class="d-inline-block mb-2 text-success">SingaporeCSS</strong>
+                <h5 class="card-title">Tools for Rapid CSS development - Talk.CSS</h5>
+                <p class="card-text">The talk about the tools that can help us to use CSS effectively to build web applications.
+                </p>
+              </div>
+              <div class="card-footer">
+                <small class="text-muted float-right"><span class="badge rounded-pill bg-secondary">CSS</span>
+                  <span class="badge rounded-pill bg-secondary">HTML</span></small>
               </div>
               </div>
             </div>
@@ -71,42 +89,7 @@
               </div>
             </div>
 
-            <div class="col">
-              <div class="card h-100">
-                <!-- 16:9 aspect ratio -->
-              <div class="embed-responsive embed-responsive-16by9">
-                <iframe class="embed-responsive-item w-100 h-100" src="https://www.youtube.com/embed/U4-OrNtEf0U" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div>
-
-              <div class="card-body">
-                <strong class="d-inline-block mb-2 text-success">Engineers.SG Conference</strong>
-                <h5 class="card-title">Confusions and Confessions of a Web Developer - SingaporeJS</h5>
-                <p class="card-text">Shared the thoughts on what we go through as a web developer during this ever-changing landscape.How and why one should look beyong these new tools, techniques, frameworks and technology to move forward</p>
-              </div>
-              <div class="card-footer">
-                <small class="text-muted float-right"><span class="badge rounded-pill bg-secondary">Web Developer</span>
-                  <span class="badge rounded-pill bg-secondary">Javascript</span></small>
-              </div>
-              </div>
-            </div>
-
-            <div class="col">
-              <div class="card h-100">
-                <!-- 16:9 aspect ratio -->
-              <div class="embed-responsive embed-responsive-16by9">
-                <iframe class="embed-responsive-item w-100 h-100" src="https://www.youtube.com/embed/pcaovUHr7gM" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div>
-
-              <div class="card-body">
-                <strong class="d-inline-block mb-2 text-success">Engineers.SG Conference</strong>
-                <h5 class="card-title">Tools for Rapid CSS development - Talk.CSS</h5>
-                <p class="card-text">The talk about the tools that can help us to use CSS effectively to build web applications.
-                </p>
-              </div>
-              <div class="card-footer">
-                <small class="text-muted float-right"><span class="badge rounded-pill bg-secondary">CSS</span>
-                  <span class="badge rounded-pill bg-secondary">HTML</span></small>
-              </div>
-              </div>
-            </div>
+            
 
             <div class="col">
               <div class="card h-100">
@@ -115,7 +98,7 @@
                 <iframe class="embed-responsive-item w-100 h-100" src="https://www.youtube.com/embed/JiqoWUlP578" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div>
 
               <div class="card-body">
-                <strong class="d-inline-block mb-2 text-success">Engineers.SG Conference</strong>
+                <strong class="d-inline-block mb-2 text-success">SingaporeCSS</strong>
                 <h5 class="card-title">Why and for whom UX (really) matters - Talk.CSS </h5>
                 <p class="card-text">First Talk.CSS of the decade went fairly well, in spite of being on the same day as the crowd-drawing Figma meetup. It was a good turnout and we love each and every one of you for supporting us. If you went to the Figma meetup instead, it’s okay, we still love you too.</p>
               </div>
@@ -134,7 +117,7 @@
               </div>
 
               <div class="card-body">
-                <strong class="d-inline-block mb-2 text-success">Bangalore JUG Conference</strong>
+                <strong class="d-inline-block mb-2 text-success">Bangalore JUG</strong>
                 <h5 class="card-title">Our Professional Life through Java Abstract Template Patterns</h5>
                 <p class="card-text">This talk is part of a series of sessions conducted by BOJUG to help people whose job is affected by COVID. More details are available here <a href="https://www.meetup.com/BangaloreOpenJUG">Banglore JUG</a></p>
               </div>
@@ -145,6 +128,25 @@
               </div>
             </div>
 
+
+            <div class="col">
+              <div class="card h-100">
+                <!-- 16:9 aspect ratio -->
+              <div class="embed-responsive embed-responsive-16by9">
+                <iframe class="embed-responsive-item w-100 h-100" src="https://www.youtube.com/embed/KyqjwicBX7E" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div>
+
+              <div class="card-body">
+                <strong class="d-inline-block mb-2 text-success">Bangalore JUG</strong>
+                <h5 class="card-title">Introduction to Jam Stack</h5>
+                <p class="card-text">Fast and secure sites and apps delivered by pre-rendering files and serving them directly from a CDN, removing the requirement to manage or run web services.</p>
+              </div>
+              <div class="card-footer">
+                <small class="text-muted float-right"><span class="badge rounded-pill bg-secondary">JavaScript</span>
+                  <span class="badge rounded-pill bg-secondary">APIs</span></small>
+                  <span class="badge rounded-pill bg-secondary">Markup</span></small>
+              </div>
+              </div>
+            </div>
             <div class="col">
               <div class="card h-100">
                 <!-- 16:9 aspect ratio -->
@@ -153,7 +155,7 @@
               </div>
 
               <div class="card-body">
-                <strong class="d-inline-block mb-2 text-success">Bangalore JUG Conference</strong>
+                <strong class="d-inline-block mb-2 text-success">Bangalore JUG</strong>
                 <h5 class="card-title">Type System in Java</h5>
                 <p class="card-text">How do represent things in Java?</p>
               </div>
@@ -170,7 +172,7 @@
                 <iframe class="embed-responsive-item w-100 h-100" src="https://www.youtube.com/embed/kyC_QSLecC8" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div>
 
               <div class="card-body">
-                <strong class="d-inline-block mb-2 text-success">Bangalore JUG Conference</strong>
+                <strong class="d-inline-block mb-2 text-success">Bangalore JUG</strong>
                 <h5 class="card-title">Things that matter for your interview preparation</h5>
                 <p class="card-text">How the things that matter for your interview preparation</p>
               </div>
