--- a/site/content/work.htm
+++ b/site/content/work.htm
@@ -66,8 +66,7 @@ tags: ["t1"]
                 src="https://www.ezeetechnosys.com/images/logo.png"></div>
     </div>
     <div class="row g-0 overflow-hidden flex-md-row mb-4 shadow-sm h-md-250 position-relative">
-        <div class="col p-4 d-flex flex-column position-static"><strong class="d-inline-block mb-2 text-primary">Digital
-                Transfermation</strong>
+        <div class="col p-4 d-flex flex-column position-static"><strong class="d-inline-block mb-2 text-primary">Digital Transformation</strong>
             <h3 class="mb-0">Sridevi Group Of Companies</h3>
             <p class="mb-auto">Incepted in 1996, Sri Devi Group (SDG)
                 is having 25 years of experience in sales and distribution of various
