fixing contnet spell hecks

--- a/site/content/presentations/about.htm
+++ b/site/content/presentations/about.htm
@@ -24,7 +24,7 @@ draft: false
         <ul class="list-group h5 text-start list-group-numbered">
             <li class="list-group-item">Academic Score</li>
             <li class="list-group-item">Tier 1 Colleges / City</li>
-            <li class="list-group-item">Communication Skils ( English )</li>
+            <li class="list-group-item">Communication Skills ( English )</li>
         </ul>
     </section>
 
@@ -67,16 +67,16 @@ draft: false
                 </g>
             </g>
         </svg>
-        <h4>Oppertunity Meets Talent</h4>
+        <h4>Opportunity Meets Talent</h4>
     </section>
 
     <section >
-        <h2>Our Approch I</h2><br><br><br>
+        <h2>Our Approach I</h2><br><br><br>
         <ul class="list-group h5 text-start list-group-numbered">
-            <li class="list-group-item">Inhouse Training</li>
+            <li class="list-group-item">In-house Training</li>
             <li class="list-group-item">Train till drain</li>
-            <li class="list-group-item">Meetup Participation</li>
-            <li class="list-group-item">Opecsource Contribution</li>
+            <li class="list-group-item">Meet-up Participation</li>
+            <li class="list-group-item">Opensource Contribution</li>
         </ul>
     </section>
 
@@ -132,11 +132,11 @@ draft: false
                 </g>
             </g>
         </svg>
-        <h4>Oppertunity Meets <span class="text-primary text-decoration-underline">Right</span> Talent</h4>
+        <h4>Opportunity Meets <span class="text-primary text-decoration-underline">Right</span> Talent</h4>
     </section>
 
     <section >
-        <h2>Our Approch II</h2><br><br><br>
+        <h2>Our Approach II</h2><br><br><br>
         <ul class="list-group h5 text-start list-group-numbered">
             <li class="list-group-item">Students through references</li>
             <li class="list-group-item">Cultural Fitment (before and after selection)</li>
@@ -159,13 +159,13 @@ draft: false
 
     <section>
         <img class="img-fluid w-25" src="/images/logo.png">
-        <h4><span class="text-primary text-decoration-underline">Right</span> Oppertunity Meets <span class="text-primary text-decoration-underline">Right</span> Talent</h4>
+        <h4><span class="text-primary text-decoration-underline">Right</span> Opportunity Meets <span class="text-primary text-decoration-underline">Right</span> Talent</h4>
     </section>
 
     <section >
-        <h2>Our Approch III</h2><br><br><br>
+        <h2>Our Approach III</h2><br><br><br>
         <ul class="list-group h5 text-start list-group-numbered">
-            <li class="list-group-item">Oppertunity from trusted source</li>
+            <li class="list-group-item">Opportunity from trusted sources</li>
             <li class="list-group-item">Opensource or Community Projects</li>
             <li class="list-group-item">Sit till you fit</li>
         </ul>
