--- a/site/content/presentations/about.htm
+++ b/site/content/presentations/about.htm
@@ -171,4 +171,13 @@ draft: false
         </ul>
     </section>
 
+    <section >
+        <h2>Our Values</h2><br><br><br>
+        <ul class="list-group h5 text-start list-group-numbered">
+            <li class="list-group-item">Training - Autonomy</li>
+            <li class="list-group-item">Architecture Consulting - Academic Base</li>
+            <li class="list-group-item">Recruitment Consulting - Process</li>
+        </ul>
+    </section>
+
 </div>
