--- a/site/content/presentations/about.htm
+++ b/site/content/presentations/about.htm
@@ -187,7 +187,7 @@ draft: false
             </div>
 
             <div class="list-group-item border-0 bg-primary">
-                <img width="160px" height="80px" src="http://zols.techatpark.com/images/logo.png" alt="">
+                <img width="160px" height="80px" src="/images/zolslogo.png" alt="">
             </div>
 
             <div class="list-group-item border-0">
