--- a/site/content/publications.htm
+++ b/site/content/publications.htm
@@ -102,19 +102,15 @@ tags: ["t1"]
         </div>
         <div class="col">
             <div class="card h-100">
-                <div class="embed-responsive embed-responsive-16by9"><iframe class="embed-responsive-item w-100 h-100"
-                        src="https://www.youtube.com/embed/_kZoFZIGjjA" title="YouTube video player" frameborder="0"
-                        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-                        allowfullscreen=""></iframe></div>
+                <div class="embed-responsive embed-responsive-16by9">
+                    <iframe class="embed-responsive-item w-100 h-100" src="https://www.youtube.com/embed/ApKGI2USsok" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div>
                 <div class="card-body"><strong class="d-inline-block mb-2 text-success">Bangalore JUG</strong>
-                    <h5 class="card-title">Our Professional Life through Java Abstract Template Patterns</h5>
-                    <p class="card-text">This talk is part of a series of sessions conducted by BOJUG to help people
-                        whose job is affected by COVID. More details are available here <a
-                            href="https://www.meetup.com/BangaloreOpenJUG">Banglore JUG</a></p>
+                    <h5 class="card-title">Quality Gateways</h5>
+                    <p class="card-text">After Memory Management We will have another exciting series of talks on Data Engineering. We will journey through various tools, technologies and techniques around the simple but most powerful word "data". But how do we take a roller coaster ride without seat belts ?! Let's set up a project that ticks all the checklists ( Good Code/ Secure Code/ Working Code).</p>
                 </div>
                 <div class="card-footer"><small class="text-muted float-right"><span
                             class="badge rounded-pill bg-secondary">Java</span> <span
-                            class="badge rounded-pill bg-secondary">Design Patterns</span></small></div>
+                            class="badge rounded-pill bg-secondary">CI CD</span></small></div>
             </div>
         </div>
         <div class="col">
