--- a/site/content/presentations/agile-devops-testing.htm
+++ b/site/content/presentations/agile-devops-testing.htm
@@ -25,10 +25,13 @@ draft: false
             <h3 class="text-end">
                 Sathish Kumar Thiyagarajan
             </h3>
-
+            <br>
             <ul class="list-group list-group-horizontal d-flex justify-content-end">
                 <div class="list-group-item border-0">
                     <img width="200px" height="100px" src="https://ourkadai.com/images/logo.png" alt="">
+                </div>
+                <div class="list-group-item border-0">
+                    <img width="160px" height="80px" src="https://scontent.fmaa2-3.fna.fbcdn.net/v/t1.18169-9/16508401_10154670274496281_1629528264331508874_n.jpg?_nc_cat=100&ccb=1-5&_nc_sid=8631f5&_nc_ohc=21XTVnwjVFQAX_wBMFC&_nc_ht=scontent.fmaa2-3.fna&oh=00_AT__G7kWvyW-UFX8eg31FDoNqKQrF8GBEjpsinr9d1Dpig&oe=62255A38" alt="">
                 </div>
                 <div class="list-group-item border-0">
                     <svg width="160px" height="90px" viewBox="0 0 65 59" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
