--- a/site/content/presentations/agile-devops-testing.htm
+++ b/site/content/presentations/agile-devops-testing.htm
@@ -132,7 +132,7 @@ draft: false
         <h2>Infrastucture and Tools</h2><br><br><br>
         
         <ul class="list-group h5 text-start list-group-numbered">
-            <li class="list-group-item">VMs, Ansible, Selinuim, JMeter, Cucumber what else</li>
+            <li class="list-group-item">VMs, Ansible, Selenium, JMeter, Cucumber what else</li>
             <li class="list-group-item">Best in class talent</li>
         </ul>
         <br> <br> <br> <br> <br>
