--- a/site/content/presentations/modern-commerce.htm
+++ b/site/content/presentations/modern-commerce.htm
@@ -113,6 +113,14 @@ draft: false
     </section>
 
     <section>
+        <h2>Lessons Learned</h2>
+        <ul class="list-group h5 text-start list-group-numbered">
+            <li class="list-group-item">Vendor Lockin</li>
+            <li class="list-group-item">Scaling (Cost)</li>
+        </ul>
+    </section>
+
+    <section>
         <h2>Options</h2>
         <ul class="list-group h5 text-start list-group-numbered">
             <li class="list-group-item">Shoppify</li>
