--- a/site/content/presentations/modern-commerce.htm
+++ b/site/content/presentations/modern-commerce.htm
@@ -130,6 +130,11 @@ draft: false
     </section>
 
     <section>
+        <h1 class="text-success">Demo</h1>
+        <h5>dollareh.ourkadai.com</h5>
+    </section>
+
+    <section>
         <h2>The Difference</h2>
     </section>
 
